Revision history for Perl distribution Class-Data-Inheritable-Translucent

1.05 Development

    - Added optional Changes testing (skipped unless AUTHOR_TESTING).

    - Reformatted Changes file as per CPAN::Changes::Spec.

    - Made Perl Critic, Pod and Pod Coverage tests skip unless AUTHOR_TESTING.

    - Added optional Perl::Critic testing.

    - Made code Perl::Critic clean.

    - Noted other modules that do almost exactly the same thing and documented
      perhaps the biggest difference from them: that accessor methods are not
      installed if the subroutines already exist.  [CPAN RT#96066]

    - Simplified Makefile.PL requirements.

1.04 2014-05-30

    - The modules listed as recommendations of optional features are actually
      requirements of those features.

1.03 2014-05-29

    - Uploaded source code to GitHub and included repository URLs in metadata.

    - Included META.json file in addition to META.yml.

    - Set minimum required ExtUtils::MakeMaker version to 6.64 to ensure that
      all parameters used are supported, to save jumping through hoops to
      support earlier versions.  (This should not be a problem since
      ExtUtils::MakeMaker 6.64 is easily installed into Perl 5.8.1 and above,
      that being the whole point of the new choice of minimum supported Perl
      version.)

    - Set minimum required Perl version to 5.8.1.  This is in line with the
      minimum requirement of the "Perl Toolchain".

1.02 2011-06-03

    - Fixed the default implementation of attrs() to work as documented, so that
      each attribute really is now stored in $obj rather than $obj->{attrs} by
      default.

1.01 2009-11-09

    - Incorporated two improvements based on code in Class::Accessor:

      * Generated accessor methods are now named using Sub::Name if that module
        is available.

      * Existing accessor methods (or their aliases) are no longer overwritten
        by mk_translucent().

1.00 2009-11-05
